--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -13,6 +13,7 @@
     "amqplib": "^0.10.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.5.1",
     "nodemailer": "^6.9.14"
   }
