--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "moment-timezone": "^0.5.45",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.5.1",
+    "node-cron": "^3.0.3"
   }
 }
