--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +17,8 @@
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.5.1",
     "nodemailer": "^6.9.14"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
