--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "amqplib": "^0.10.4",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.5.1",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "stripe": "^16.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
