--- a/subcription-service/package.json
+++ b/subcription-service/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "amqplib": "^0.10.4",
     "axios": "^1.7.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.5.1",
+    "puppeteer": "^23.0.2",
+    "stripe": "^16.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
