--- a/user-service/package.json
+++ b/user-service/package.json
@@ -14,11 +14,15 @@
     "amqplib": "^0.10.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-redis": "^7.0.3",
     "moment-timezone": "^0.5.45",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.5.1",
+    "redis": "^4.7.0",
+    "stripe": "^16.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
