--- a/subcription-service/package.json
+++ b/subcription-service/package.json
@@ -16,10 +16,13 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-redis": "^7.0.3",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.5.1",
     "puppeteer": "^23.0.2",
+    "redis": "^4.7.0",
     "stripe": "^16.7.0"
   },
   "devDependencies": {
